[dev] Examples and fixes for Platform-Layer module.